--- a/style/mediaqueries/mainpage.css
+++ b/style/mediaqueries/mainpage.css
@@ -29,9 +29,11 @@
 /** desktop vertical portrait */
 @media screen and (min-width: 1024px) {
     /** SECTION 1 */
-    #section1Content {
-        position: absolute;
-        top: 40%;
+    #section1 {
+        height: 700px;
+        background-image: url("../../images/pgPrincipal1_blurred.jpg");
+        background-size: cover;
+    } #section1Content {
         margin-left: 10%;
     } #mainTitle {
         font-size: 100px;
