--- a/style/mediaqueries/mainpage.css
+++ b/style/mediaqueries/mainpage.css
@@ -32,6 +32,8 @@
     #section1 {
         height: 700px;
         background-image: url("../../images/pgPrincipal1_blurred.jpg");
+        background-color: rgba(0,0,0,0.25);
+        background-blend-mode: darken;
         background-size: cover;
     } #section1Content {
         margin-left: 10%;
