--- a/style/mediaqueries/mainpage.css
+++ b/style/mediaqueries/mainpage.css
@@ -26,8 +26,91 @@
        
 }
 
-/** desktop vertical portrait */
+/** desktop screen */
 @media screen and (min-width: 1024px) {
+    /** SECTION 1 */
+    #section1 {
+        height: 550px; /* 700 */
+        background-image: url("../../images/pgPrincipal1_blurred.jpg");
+        background-color: rgba(0,0,0,0.25);
+        background-blend-mode: darken;
+        background-size: cover;
+    } #section1Content {
+        margin-left: 10%;
+    } #mainTitle {
+        font-size: 80px; /* 100 */
+        line-height: 70%;
+    }
+
+    /** SECTION TIMER / DIVIDING PART */
+    #sectionTimer {
+        height: 15px; /* 15 */
+        width: 100%;
+    } #boxTimer {
+        position: relative;
+        top: -82.5px; /* -height_boxTimer/2 + height_sectionTimer/2 */ /* -102.5 */
+
+        height: 180px; /* 220 */
+        width: 30%;
+
+        border-radius: 30px; /* 40 */
+    }
+
+    /** SECTION 2 */
+    #section2 {
+        padding-top: 12%; /* 10 */
+        padding-bottom: 12%; /* 10 */
+    } #section2Content {
+        width: 80%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    } #section2Txt {
+        width: 50%;
+    } #section2Img {
+        width: 50%;
+        margin-left: 5%;
+        overflow: hidden;
+    }
+
+    /** SECTION 3 */
+    #section3 {
+        padding-top: 6%; /* half of section2's padding */
+        padding-bottom: 6%; /* half of section2's padding */
+    } #section3Content {
+        width: 80%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    } #section3Images {
+        width: 100%;
+        height: 350px; /* 500 */
+        padding-top: 2%;
+        padding-bottom: 2%;
+    } #section3Img1 {
+        height: 100%;
+        width: 40%;
+
+        background-image: url("https://imagens.publico.pt/imagens.aspx/800670?tp=KM&db=IMAGENS&type=JPG");
+        background-size: cover;
+        background-repeat: no-repeat;
+    } #section3Img2 {
+        height: 100%;
+        width: 20%;
+
+        background-image: url("https://postal.pt/wp-content/uploads/2023/04/25-de-Abril-3.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+    } #section3Img3 {
+        height: 100%;
+        width: 35%;
+
+        background-image: url("https://www.jpn.up.pt/wp-content/uploads/2016/04/Sem-Título-18.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+}
+
+/** bigger desktop screen */
+@media screen and (min-width: 1370px) {
     /** SECTION 1 */
     #section1 {
         height: 700px;
@@ -68,6 +151,7 @@
         width: 50%;
     } #section2Img {
         margin-left: 5%;
+        overflow: hidden;
     }
 
     /** SECTION 3 */
