--- a/style/mediaqueries/mainpage.css
+++ b/style/mediaqueries/mainpage.css
@@ -1,33 +1,118 @@
-/* @media (max-width: 700px) {
-    .form {
-        transform: scaleX(0.9) scaleY(0.9);
-    }
-}
-
-@media (max-width: 400px) {
-    .form {
-        transform: scaleX(0.8) scaleY(0.8);
-    }
-}
-
-@media (max-width: 320px) {
-    .form {
-        transform: scaleX(0.65) scaleY(0.65);
-    }
-} */
-
 /** mobile */
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px)  {
     
 }
 
 /** tablet vertical portrait */
-@media screen and (min-width: 768px) {
-       
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+       /** SECTION 1 */
+    #section1 {
+        height: 850px; /* 700 */
+        background-image: url("../../images/pgPrincipal1_Vertical_blurred.jpg");
+        background-position: 0% 20%;
+        background-color: rgba(0,0,0,0.25);
+        background-blend-mode: darken;
+        background-size: cover;
+    } #section1Content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    } #mainTitle {
+        display: none;
+    } #mainTitleVertical {
+        display: flex;
+        text-align: center;
+        font-size: 80px; /* 100 */
+        line-height: 70%;
+    } #mainTxt {
+        text-align: center;
+
+        width: 50%;
+        margin-top: 2.5%;
+        margin-bottom: 2.5%;
+    }
+
+    /** SECTION TIMER / DIVIDING PART */
+    #sectionTimer {
+        height: 15px; /* 15 */
+        width: 100%;
+    } #boxTimer {
+        position: relative;
+        top: -82.5px; /* -height_boxTimer/2 + height_sectionTimer/2 */ /* -102.5 */
+
+        height: 180px; /* 220 */
+        width: 50%;
+
+        border-radius: 30px; /* 40 */
+    }
+
+    /** SECTION 2 */
+    #section2 {
+        padding-top: 20%; /* 10 */
+        padding-bottom: 20%; /* 10 */
+    } #section2Content {
+        display: flex;
+        flex-direction: column-reverse;
+
+        width: 80%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    } #section2Txt {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        text-wrap: pretty;
+    } #section2Txt a {
+        margin-top: 20px;
+    } #section2Img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        object-position: 0% 10%;
+        overflow: hidden;
+        margin-bottom: 20px;
+    }
+
+    /** SECTION 3 */
+    #section3 {
+        padding-top: 6%; /* half of section2's padding */
+        padding-bottom: 6%; /* half of section2's padding */
+    } #section3Content {
+        width: 80%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    } #section3Images {
+        width: 100%;
+        height: 350px; /* 500 */
+        padding-top: 2%;
+        padding-bottom: 2%;
+    } #section3Img1 {
+        height: 100%;
+        width: 40%;
+
+        background-image: url("https://imagens.publico.pt/imagens.aspx/800670?tp=KM&db=IMAGENS&type=JPG");
+        background-size: cover;
+        background-repeat: no-repeat;
+    } #section3Img2 {
+        height: 100%;
+        width: 20%;
+
+        background-image: url("https://postal.pt/wp-content/uploads/2023/04/25-de-Abril-3.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+    } #section3Img3 {
+        height: 100%;
+        width: 35%;
+
+        background-image: url("https://www.jpn.up.pt/wp-content/uploads/2016/04/Sem-Título-18.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
 }
 
 /** desktop screen */
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1369px)  {
     /** SECTION 1 */
     #section1 {
         height: 550px; /* 700 */
@@ -40,6 +125,9 @@
     } #mainTitle {
         font-size: 80px; /* 100 */
         line-height: 70%;
+        display: flex;
+    } #mainTitleVertical {
+        display: none;
     }
 
     /** SECTION TIMER / DIVIDING PART */
@@ -61,13 +149,19 @@
         padding-top: 12%; /* 10 */
         padding-bottom: 12%; /* 10 */
     } #section2Content {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
         width: 80%;
         padding-top: 2%;
         padding-bottom: 2%;
     } #section2Txt {
         width: 50%;
+        text-wrap: pretty;
     } #section2Img {
         width: 50%;
+        height: 100%;
         margin-left: 5%;
         overflow: hidden;
     }
@@ -121,8 +215,11 @@
     } #section1Content {
         margin-left: 10%;
     } #mainTitle {
-        font-size: 100px;
+        font-size: 80px; /* 100 */
         line-height: 70%;
+        display: flex;
+    } #mainTitleVertical {
+        display: none;
     }
 
     /** SECTION TIMER / DIVIDING PART */
@@ -144,13 +241,19 @@
         padding-top: 10%;
         padding-bottom: 10%;
     } #section2Content {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
         width: 80%;
         padding-top: 2%;
         padding-bottom: 2%;
     } #section2Txt {
         width: 50%;
+        text-wrap: pretty;
     } #section2Img {
         margin-left: 5%;
+        height: 100%;
         overflow: hidden;
     }
 
