if it's the day 25 of a month (which means, if it is X years and X month anniversary and 0 days of the festive date), show number of hours of today's and "hours" as text instead of "0 days"

--- a/style/mediaqueries/sobreProjeto.css
+++ b/style/mediaqueries/sobreProjeto.css
@@ -19,6 +19,7 @@
     } #secondSectionTxt {
         width: 100%;
         margin-top: 20px;
+        text-wrap: pretty;
     }
 
     #thirdSection {
@@ -26,6 +27,7 @@
         margin-bottom: 50px;
     } #contentCreditsTxt {
         margin: 80px;
+        text-wrap: pretty;
     }  
 }
 
@@ -46,6 +48,7 @@
         width: 40%;
     } #secondSectionTxt {
         width: 55%;
+        text-wrap: pretty;
     }
 
     #thirdSection {
@@ -53,6 +56,7 @@
         margin-bottom: 50px;
     } #contentCreditsTxt {
         margin: 80px;
+        text-wrap: pretty;
     }
 }
 
