--- a/style/mediaqueries/jogosEducativos.css
+++ b/style/mediaqueries/jogosEducativos.css
@@ -1,6 +1,74 @@
 /** mobile */
 @media screen and (min-width: 320px) and (max-width: 767px)  {
-    
+    #timelineContent {
+        padding-top: 25%; /* 10 */
+    }
+
+    /** TIME LINE BAR */
+    #timelineBar {
+        margin-top: 2%;
+        margin-bottom: 20%;
+
+        width: 100%;
+        height: 10px;
+
+        border-radius: 10px;
+    } #timelineBarFilled {
+        width: 20%; /* to be changed by js frontend*/
+        height: 10px;
+
+        border-radius: 10px;
+    } #timelineBall {
+        width: 20px;
+        height: 20px;
+
+        border-radius: 12.5px;
+
+        position: relative;
+        top: -5px; /* (timelineBall_height - timelineBar_height) / 2 */
+    } #yearOnTimeline {
+        position: relative;
+        top: 125%;
+    }
+
+    /** YEAR GAME LIST TITLE */
+    .yearGameTitle {
+        width: 10%;
+        border-bottom: solid #C0392B;
+        border-radius: 5px;
+    } .yearGameTitle2 {
+        width: 70%;
+        border-bottom: solid #C0392B;
+        border-radius: 5px;
+    }
+
+    /** GAME LIST */
+    #gameSection {
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+        margin-bottom: 50px;
+    } #gameList {
+        width: 80%;
+        display: grid;
+        grid-template-columns: 46% 46%;
+        grid-auto-rows: 150px;
+        row-gap: 20px;
+        column-gap: 8%;
+    } #divGame {
+        width: 100%;
+        height: 150px;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    } #divGameTitle {
+        width: 100%;
+    } #divGameImg {
+        width: 100%;
+        height: 85%;
+
+        border-radius: 20px;
+    }
 }
 
 /** tablet vertical portrait */
