--- a/style/mediaqueries/materiaisEducativos.css
+++ b/style/mediaqueries/materiaisEducativos.css
@@ -1,6 +1,118 @@
 /** mobile */
 @media screen and (min-width: 320px) and (max-width: 767px) {
+    /** FIGURAS/GRUPOS IMPORTANTES */
+    #figuresContent {
+        padding-top: 30%;
+        padding-bottom: 20%;
+        text-wrap: pretty;
+    } #figuresTxt {
+        margin-top: 5%;
+        margin-bottom: 5%;
+    }
     
+    #figuresImgDiv a {
+        width: 50px; /* 100 */
+        height: 50px; /* 100 */
+        border: solid #000;
+        border-width: 2px;
+        border-radius: 100px;
+        margin-right: 15px;
+    }
+
+    /** TIMELINE */
+    #timelineIntro {
+        margin-top: 5%;
+        margin-bottom: 5%;
+        text-wrap: pretty;
+    }
+
+    #timelineDiv {
+        height: 900px; /* 800 */
+    }
+
+    /** structure of year+ball of timeline vertical bar */
+    #ballYears {
+        height: 100%;
+    } #ballYearsResponsive {
+        height: 50%;
+
+        position: relative;
+        left: 28%;
+        bottom: 2.2%;
+    } .ballYear {
+        height: 16.6%;
+    } #ballYear:hover {
+        cursor: pointer;
+    }
+
+    /** balls format of timeline vertical bar */
+    .timelineBall {
+        width: 25px;
+        height: 25px;
+        border-radius: 12.5px;
+        margin-left: 10px;
+    } .activeBall {
+        background-color: #C0392B;
+        border: solid #C0392B;
+        border-width: 1px;
+    } .inactiveBall {
+        background-color: #FDEBD0;
+        border: solid #000;
+        border-width: 1px;
+    }
+
+    /** structure of timeline vertical bar*/ 
+    #yearsBarContent {
+        height: 100%;
+    } #yearsBar {
+        width: 15px;
+        height: 100%;
+        border-radius: 7.5px;
+    } #yearsBarFilledDefault {
+        width: 100%;
+        border-top-left-radius: 7.5px;
+        border-top-right-radius: 7.5px;
+
+        height: 25%;
+    } #yearsBarResponsive {
+        height: 50%; /* VALUE WILL CHANGE WITH JAVASCRIPT */
+    } .yearsBarFilled {
+        width: 15px;
+        height: 16.6%;
+    }
+
+
+    /** TIMELINE DESCRIPTION/INFO CONTENT */
+    #timelineDescriptionBg {
+        height: 100%;
+        width: 100%;
+
+        background-image: url(../../images/pgPrincipal2.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+    } #timelineDescription {
+        height: 100%;
+        width: 100%;
+
+        background-image: linear-gradient(to right, #434343e8 , #434343);
+    } #timelineDescription div {
+        width: 80%;
+        margin-top: 80px;
+    } #timelineTxt {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    } #timelineDescriptionPages {
+        margin-bottom: 40px;
+    } #timelineDescriptionPages p {
+        margin-left: 5px;
+        margin-right: 5px;
+    } #timelineDescriptionPages p {
+        cursor: pointer;
+    }
+
+    #timelineContent {
+        margin-bottom: 100px;
+    }
 }
 
 /** tablet vertical portrait */
